methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:1: error: Missing closing brace `}' assumed here
def faireMotif() {
^PatternPicture:1: error: expected class or object definition
def faireMotif() {
^